--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -22,8 +22,10 @@ nav {
 }
 
 body {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
     font-family: "Georgia", serif;
     font-size: 1rem;
     line-height: 1.4rem;
